<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context=".feature.sat.SATResultActivity">

    <TextView
        android:id="@+id/sat_results_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sat_results"/>

    <TextView
        android:id="@+id/dbn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_big_margin"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="245781"/>

    <TextView
        android:id="@+id/school_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sat_results_label"
        tools:text="Instituto Tecnologico de Monterrey"/>

    <TextView
        android:id="@+id/location_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/layout_big_margin"
        android:layout_marginTop="@dimen/layout_big_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/school_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/layout_big_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/school_name"
        app:layout_constraintStart_toEndOf="@id/location_label"
        tools:text="En un lugar de la mancha"/>

    <TextView
        android:id="@+id/num_of_sat_test_takers_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/num_of_sat_test_takers"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintEnd_toStartOf="@id/num_of_sat_test_takers"/>

    <TextView
        android:id="@+id/num_of_sat_test_takers"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="978"/>

    <TextView
        android:id="@+id/sat_critical_reading_avg_score_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/sat_critical_reading_avg_score"
        app:layout_constraintTop_toBottomOf="@id/num_of_sat_test_takers"
        app:layout_constraintEnd_toStartOf="@+id/sat_critical_reading_avg_score"/>

    <TextView
        android:id="@+id/sat_critical_reading_avg_score"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/num_of_sat_test_takers"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="88"/>

    <TextView
        android:id="@+id/sat_writing_avg_score_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/sat_writing_avg_score"
        app:layout_constraintTop_toBottomOf="@id/sat_critical_reading_avg_score_label"
        app:layout_constraintEnd_toStartOf="@+id/sat_writing_avg_score"/>

    <TextView
        android:id="@+id/sat_writing_avg_score"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        tools:text="92"
        app:layout_constraintTop_toBottomOf="@id/sat_critical_reading_avg_score_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sat_math_avg_score_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/sat_math_avg_score"
        app:layout_constraintTop_toBottomOf="@id/sat_writing_avg_score_label"
        app:layout_constraintEnd_toStartOf="@+id/sat_math_avg_score"/>

    <TextView
        android:id="@+id/sat_math_avg_score"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/sat_writing_avg_score_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="87"/>

    <TextView
        android:id="@+id/contact"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_big_margin"
        android:textSize="@dimen/text_size_large"
        android:text="@string/contact"
        app:layout_constraintTop_toBottomOf="@id/sat_math_avg_score_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        tools:text="(325) 489-9822"/>

    <TextView
        android:id="@+id/school_email"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        app:layout_constraintStart_toStartOf="@+id/contact"
        tools:text="school@schooldomain.com"/>

    <Button
        android:id="@+id/go_to_website"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/layout_big_margin"
        android:textSize="@dimen/text_size_extra_large"
        android:text="@string/go_to_website"
        app:layout_constraintTop_toBottomOf="@id/school_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
